// table, select the proper icon (see legend at the bottom of this documents)
// and adapt the link to point to your pull request. Please dont forget
// the empty line separators.

////
| 🎁🐛✨🐣🗑️
|
| https://github.com/knative/client/pull/[#]
////

## v0.14.0 (unreleased)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add concurrency-utilization option for `service create` and `service update` (`--concurrency-utilization`)
| https://github.com/knative/client/pull/788[#788]

| 🐣
| Refactor `e2e` common code into `lib/test`
| https://github.com/knative/client/pull/765[#765]

| 🐛
| Fix plugin lookup with file ext on Windows
| https://github.com/knative/client/pull/774[#774]

| 🐛
| Correct error message when updating service
| https://github.com/knative/client/pull/778[#778]

|===

## v0.13.1 (2020-03-25)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐛
| Fix filter delete for trigger update command
| https://github.com/knative/client/pull/746[#746]

| 🐛
| Fix trigger create --filter flag to be optional
| https://github.com/knative/client/pull/745[#745]

| 🐛
| Fix plugin execution for Windows.
| https://github.com/knative/client/pull/738[#738]

| 🐛
| Fix default config path on Windows
| https://github.com/knative/client/pull/751[#751]
|===

## v0.13.0 (2020-03-11)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add a flag `--inject-broker` to `kn trigger create`
| https://github.com/knative/client/pull/726[#726]

| 🐛
| Improve reporting for missing `kubeconfig` and error connecting to the cluster
| https://github.com/knative/client/pull/725[#725]

| 🎁
| Add JSON/YAML output format for `kn version`
| https://github.com/knative/client/pull/709[#709]

| 🐣
| Replace `kn source cronjob` with `kn source ping`. `--schedule` is not mandatory anymore and defaults to "* * * * *" (every minute)
| https://github.com/knative/client/issues/705[#705]

| ✨